# Kitchen-YOLO-Dataset

./: LICENSE.md  README.md  alexandros_vision.yaml  class_stats.py  classes.txt  image_collector.py  notes.json  pyproject.toml
final_export/: 100  101  102  103  104  105  106  107  108  110  111  112  113  114  115  116  117  118  119  121  122  123  124  125  126  127  128  129  130  133  134  135  136  137  167  168  169  170  171  172  (+171 more)
labels/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+171 more)
