[tool.poetry]
name = "kitchen-yolo-dataset"
version = "1.0.0"
description = ""
license = "LICENSE.md"
authors = ["manizheh1 <Manizheh.Zand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
label-studio = "1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
